avfilter/vsrc_testsrc: do not round down width and height for color src

ff_draw_rectangle handles subsampling since 2013.

Fixes ticket #10989.

Signed-off-by: Marton Balint <cus@passwd.hu>